syntax = "proto3";

package transaction;
option go_package = "grpc/transaction/transactionpb";

message Transaction {
  int64 extrinsic_index = 1;
  string signature = 2;
  string signer = 3;
  int64  nonce = 4;
  string method = 5;
  string section = 6;
  string args = 7;
}

message GetByHeightRequest {
  int64 height = 1;
}

message GetByHeightResponse {
  repeated Transaction transactions = 1;
}

service TransactionService {
  rpc GetByHeight (GetByHeightRequest) returns (GetByHeightResponse) {}
}

